--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,12 @@
 // Specific CSS for your home-page
+.nav-lists {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+}
+
+.lists {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
