--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,35 @@
-<h1> <%= @list.name %> </h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/390089/film-movie-motion-picture-390089.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
+  <div class="container">
+    <h1><%= @list.name %></h1>
+  </div>
+</div>
 
-<%= link_to "Back to Lists", lists_path %>
+<div class="list-config">
+  <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-success mt-3" %>
+  <%= link_to "Back to Lists", lists_path, class: "btn btn-warning mt-3" %>
+</div>
+
+<div class="bookmarks">
+  <% @list.bookmarks.each do |bookmark| %>
+
+    <div class="bookmark">
+      <img src= <%= bookmark.movie.poster_url %> />
+      <div class="bookmark-infos">
+        <div>
+          <h2> <%= bookmark.movie.title %> </h2>
+          <p> <%= bookmark.movie.overview %> </p>
+        </div>
+        <div class="ratings">
+          <i class="fas fa-star"></i>
+          <h2 class="bookmark-rating"><%= bookmark.movie.rating %> </h2>
+        </div>
+      </div>
+      <div class="bookmark-content">
+        <h5> "<%= bookmark.comment %>"" </h5>
+        <p><%= link_to "Delete", bookmark_path(bookmark), method: :delete, data: { confirm: "Delete ?" } %></p>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+
