--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,7 +6,7 @@
 
 <div class="list-config">
   <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-success mt-3" %>
-  <%= link_to "Back to Lists", lists_path, class: "btn btn-warning mt-3" %>
+  <%= link_to "Back to Lists", root_path, class: "btn btn-warning mt-3" %>
 </div>
 
 <div class="bookmarks">
