user images added

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/33129/popcorn-movie-party-entertainment.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
   <div class="container">
-    <h1>Create your custom movie Lists !</h1>
+    <h1>Create your custom movies Lists !</h1>
   </div>
 </div>
 
@@ -11,7 +11,7 @@
 <div class="lists">
   <% @lists.each do |list| %>
     <%= link_to list_path(list) do %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/2398354/pexels-photo-2398354.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path list.photo.key %>)">
         <%= list.name %>
       </div>
     <% end %>
