--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/390089/film-movie-motion-picture-390089.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= cl_image_path @list.photo.key %>)">
   <div class="container">
     <h1><%= @list.name %></h1>
   </div>
@@ -6,6 +6,7 @@
 
 <div class="list-config">
   <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-success mt-3" %>
+  <%= link_to "Delete List", list_path(@list), method: :delete, data: { confirm: "Delete ?" }, class: "btn btn-danger mt-3" %>
   <%= link_to "Back to Lists", root_path, class: "btn btn-warning mt-3" %>
 </div>
 
