button back to lists

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,4 +4,4 @@
   <%= f.submit %>
 <% end %>
 
-<%= link_to "Back to Lists", root_path %>
+<%= link_to "Back to Lists", root_path, class: "btn btn-warning m-3" %>
