--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -4,4 +4,4 @@
   <%= f.submit %>
 <% end %>
 
-<%= link_to "Back to List", list_path(@list) %>
+<%= link_to "Back to List", list_path(@list), class: "btn btn-warning m-3" %>
